k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fervor
  labels:
    app: fervor-bookstore
