k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: fervor
  labels:
    app: fervor-bookstore
    component: backend
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
